@@ -5,6 +5,7 @@ version 1.0-rc - XX-Apr-2011
 . [NEW] Tempaltes: Possibility to run the installer from any directory
 . [NEW] TextureAtlas: added possibility to draw the quads in parts
 . [FIX] All: Removed many deprecated methods and classes that were scheduled for removal on v1.0
+. [FIX] ccpLineIntersect: doesn't produce false positives for collisions (issue #962)
 . [FIX] Documentation: Drawing primitives fixed syntax error (issue #1127)
 . [FIX] Documentation: onExit doxystring improved (issue #1135)
 . [FIX] ProgressTimer: fixed underflow in setPercentage() (issue #1123)
